[gd_scene format=3 uid="uid://crhumpled6lle"]

[ext_resource type="Script" uid="uid://dyimu5iri5w3c" path="res://Hud/Sell_interface/Item_box_sell/item_box_sell.gd" id="1_4tbab"]
[ext_resource type="Texture2D" uid="uid://cjo8tlux8q3il" path="res://Assets/upgrade_base.png" id="2_n0e3p"]
[ext_resource type="Texture2D" uid="uid://b4e840s5hda1u" path="res://Assets/upgrade_sword.png" id="3_cmxqu"]

[node name="ItemBox" type="Button" unique_id=2037923807]
custom_minimum_size = Vector2(32, 32)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 328.0
offset_top = 240.0
offset_right = -826.0
offset_bottom = -448.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4tbab")

[node name="Control" type="Control" parent="." unique_id=110957605]
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2

[node name="background" type="Sprite2D" parent="Control" unique_id=1218399184]
position = Vector2(16, 16)
texture = ExtResource("2_n0e3p")

[node name="icon_sprite2d" type="Sprite2D" parent="Control" unique_id=1539634978]
unique_name_in_owner = true
position = Vector2(16, 16)
texture = ExtResource("3_cmxqu")

[node name="DescriptionLabel" type="Label" parent="Control" unique_id=1568070542]
unique_name_in_owner = true
layout_mode = 0
offset_left = 9.0
offset_top = -29.0
offset_right = 100.0
offset_bottom = -6.0
text = "ciaooooooo"
horizontal_alignment = 1

[node name="Label" type="Label" parent="Control" unique_id=1780447225]
layout_mode = 0
offset_left = 40.0
offset_top = -8.0
offset_right = 58.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 32
text = "="
horizontal_alignment = 1

[node name="Price" type="Label" parent="Control" unique_id=1710839840]
layout_mode = 0
offset_left = 57.0
offset_top = -7.0
offset_right = 96.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 26
text = "1$"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
